# f1lab

./: .coverage  .dockerignore  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  .vercelignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.py  evaluate.py  features.py  fly.toml  pyproject.toml  qualifying_viz.py  race_replay_data.py  race_replay_viz.py  requirements.txt  startup.sh
.azure/: config
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
.streamlit/: config.toml
api/: index.py
data/: Formula1_2025Season_QualifyingResults.csv  Formula1_2025Season_RaceResults.csv  Formula1_2025Season_SprintResults.csv
models/: .gitkeep  Driver_encoder.pkl  Team_encoder.pkl  Track_encoder.pkl  f1_model.pkl
notebooks/: 01_Data_Exploration.ipynb  04_Race_Prediction_Model.ipynb  05_Sprint_Analysis.ipynb  05_fastf1_telemetry.ipynb  06_FastF1_Telemetry_Demo.ipynb  06_prediction.ipynb  data_exploration.ipynb  f1_experiments.ipynb  fastf1_animation.ipynb  fastf1_telemetry.ipynb  qualifying_analysis.ipynb  race_analysis.ipynb  sprint_analysis.ipynb
notebooks/models/: Driver_encoder.pkl  Team_encoder.pkl  Track_encoder.pkl  f1_model.pkl
src/: __init__.py  advanced_viz.py  analysis.py  app.py  arcade_replay_window.py  config.py  dash_app.py  evaluate.py  f1.py  fastf1_animations.py  fastf1_extended.py  fastf1_loader.py  fastf1_plotting.py  features.py  home.py  loader.py  model.py  qualifying_viz.py
tests/: __init__.py  test_analysis.py  test_evaluate.py  test_fastf1_loader.py  test_features.py  test_loader.py  test_model.py
